# pyaws_s3

./: .gitignore  LICENSE.md  README.md  pypi_deploy.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
pyaws_s3/: s3.py
src/pyaws_s3/: s3.py  util.py
src/qi_aws_s3/: s3.py
