[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaws_s3"
version = "1.0.0"
description = "A Python package for AWS S3 utilities"
authors = [
    { name="Giuseppe Zileni", email="giuseppe.zileni@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license-files = ["LICEN[CS]E*"]
classifiers = ['Programming Language :: Python :: 3', 'Operating System :: OS Independent']
dependencies = [
    "aioboto3==14.3.0",
    "aiobotocore==2.22.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "boto3==1.37.3",
    "botocore==1.37.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.0",
    "fpdf==1.7.2",
    "frozenlist==1.6.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kiwisolver==1.4.8",
    "langsmith==0.3.42",
    "matplotlib==3.10.3",
    "multidict==6.4.3",
    "narwhals==1.39.1",
    "numpy==2.2.5",
    "orjson==3.10.18",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "plotly==6.1.0",
    "propcache==0.3.1",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "s3transfer==0.11.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wrapt==1.17.2",
    "yarl==1.20.0",
    "zstandard==0.23.0"
]